@startuml

title __FINA's Class Diagram__\n

  namespace com.Controller {
    class com.Controller.CreateDbUtils {
    }
  }
  

  namespace com.Controller {
    class com.Controller.ManageDbUtils {
    }
  }
  

  namespace com.Main {
    class com.Main.Main {
    }
  }
  

  namespace com.Model.Courses {
    class com.Model.Courses.Course {
    }
  }
  

  namespace com.Model.Courses {
    class com.Model.Courses.Module {
    }
  }
  

  namespace com.Model.MainBody {
    class com.Model.MainBody.Instructor {
    }
  }
  

  namespace com.Model.MainBody {
    class com.Model.MainBody.Student {
    }
  }
  

  namespace com.Model.MainBody {
    class com.Model.MainBody.Users {
    }
  }
  

  namespace com.View {
    class com.View.AdminFrame {
    }
  }
  

  namespace com.View {
    class com.View.Gui {
    }
  }
  

  namespace com.View {
    class com.View.InstructorFrame {
    }
  }
  

  namespace com.View {
    class com.View.Login {
    }
  }
  

  namespace com.View {
    class com.View.Register {
    }
  }
  

  namespace com.View {
    class com.View.SelectModules {
    }
  }
  

  namespace com.View {
    class com.View.StudentFrame {
    }
  }
  

  namespace com.View {
    class com.View.UserType {
    }
  }
  

  com.Model.Courses.Course o-- com.Controller.ManageDbUtils : manageDbUtils
  com.Model.Courses.Course o-- com.Model.Courses.Module : module
  com.Model.MainBody.Instructor -up-|> com.Model.MainBody.Users
  com.Model.MainBody.Instructor o-- com.Controller.ManageDbUtils : manageDbUtils
  com.Model.MainBody.Student -up-|> com.Model.MainBody.Users
  com.Model.MainBody.Student o-- com.Controller.ManageDbUtils : manageDbUtils
  com.View.AdminFrame -up-|> javax.swing.JFrame
  com.View.AdminFrame o-- com.Model.Courses.Course : course
  com.View.AdminFrame o-- com.Controller.ManageDbUtils : manageDbUtils
  com.View.AdminFrame o-- com.Model.Courses.Module : module
  com.View.InstructorFrame -up-|> javax.swing.JFrame
  com.View.Login .up.|> java.awt.event.ActionListener
  com.View.Login -up-|> javax.swing.JFrame
  com.View.Register -up-|> javax.swing.JFrame
  com.View.Register o-- com.Controller.ManageDbUtils : manageDbUtils
  com.View.Register o-- com.Model.MainBody.Users : users
  com.View.SelectModules -up-|> javax.swing.JFrame
  com.View.SelectModules o-- com.Controller.ManageDbUtils : manageDbUtils
  com.View.SelectModules o-- com.Model.Courses.Module : module
  com.View.StudentFrame -up-|> javax.swing.JFrame
  com.View.UserType .up.|> java.awt.event.ActionListener
  com.View.UserType -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
